--- a/src/page.html
+++ b/src/page.html
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body class="bg-secondary">
-    <header class="container">
+    <header class="container-fluid">
       <nav class="navbar-nav d-flex flex-row p-1">
-        <button type="button" class="btn btn-dark col">Home</button>
-        <button type="button" class="btn btn-dark col">Menu</button>
-        <button type="button" class="btn btn-dark col">About</button>
+        <button type="button" id='home' class="btn btn-dark col">Home</button>
+        <button type="button" id='menu' class="btn btn-dark col">Menu</button>
+        <button type="button" id='about' class="btn btn-dark col">About</button>
       </nav>
-      <div id="container border"></div>
     </header>
+    <main class="container-fluid">
+      <div id="container" class="p-3 m-1 d-flex flex-wrap flex-column text-center justify-content-center align-items-center"></div>
+    </main>
+    <footer class="container-fluid bg-dark p-2 d-flex justify-content-center align-items-center">
+        <p class="text-light m-0">Odin Project</p>
   </body>
 </html>
